<resources>
    <string name="app_name">兼职</string>
    <string name="sales">销售任务</string>
    <string name="sales_collection">销售收藏</string>
    <string name="service_collection">服务收藏</string>
    <string name="service">服务任务</string>
    <string name="exit">再按一次退出</string>
    <string name="category">类别</string>
    <string name="amount_of_money">金额</string>
    <string name="commission">佣金</string>
    <string name="general">综合</string>
    <string name="time">时间</string>
    <string name="receive_numberof">领取人数:</string>
    <string name="attract_investment_number">招商数量：</string>
    <string name="price">万元起</string>
    <string name="advertisement_attractinvestment">广告招商</string>
    <string name="other_attractinvestment">其他招商</string>
    <string name="product_attractinvestment">产品招商</string>
    <string name="task">任务</string>
    <string name="ongoing">进行中</string>
    <string name="complete">已完成</string>
    <string name="be_overdue">已过期</string>
    <string name="setting">我的设置</string>
    <string name="authentication">已认证</string>
    <string name="authentication_data">认证资料</string>
    <string name="retrun_business_text">返回酒商</string>
    <string name="my_task_text">我的任务</string>
    <string name="timejobs_text">我的兼职</string>
    <string name="other_task">其他任务</string>
    <string name="check_task">稽核任务</string>
    <string name="investigation_task">调研任务</string>
    <string name="price_rmb">元</string>
    <string name="account">账户</string>
    <string name="subordinate">下级</string>
    <string name="balance_text">账户余额</string>
    <string name="attract_money">招商金额:</string>
    <string name="percentage">提成金额:</string>
    <string name="account_detail">账户明细</string>
    <string name="name">姓名</string>
    <string name="perc">提成：</string>
    <string name="taskdetails">任务详情</string>
    <string name="tasksetbacks">任务进度</string>
    <string name="collet_text">已放入收藏夹</string>
    <string name="receivetask_tx">领取任务</string>
    <string name="collection_tex">收藏</string>
    <string name="product">产品展示</string>
    <string name="parameter">参数详情</string>
    <string name="percentage1">提成规则</string>
    <string name="attract_investment">招商政策</string>
    <string name="receivetask_succuess">领取成功</string>
    <string name="tx_use">领用人数:</string>
    <string name="person">人</string>
    <string name="tx_exwprice">出厂价:</string>
    <string name="retail_price">建议零售价:</string>
    <string name="tx_bonus_proportion">该产品招商兼职人员提成比例:</string>
    <string name="tx_bonus_minimum">该产品最低提成奖金：</string>
    <string name="tx_notes_percentagelrele">注：该产品招商最低首单打款金额</string>
    <string name="str_product_name">品名：</string>
    <string name="str_weight">净含量：</string>
    <string name="str_aroma">香型：</string>
    <string name="str_place_of_production">产地：</string>
    <string name="str_degree">度数：</string>
    <string name="str_factoryname">厂家：</string>
    <string name="str_fist_order">首单金额:</string>
    <string name="str_region">招商区域：</string>
    <string name="str_task_Requisitioning">任务领用人列表</string>
    <string name="str_present_setbacks">当前进度</string>
    <string name="str_established">平台确认</string>
    <string name="str_intention_customer">意向客户:</string>
    <string name="str_customer_address">客户地址：</string>
    <string name="str_customer_manager">客户经理：</string>
    <string name="str_contact_information">联系方式:</string>
    <string name="str_negotiate">招商洽谈</string>
    <string name="activity_contract">合同</string>
    <string name="str_commint">提交</string>
    <string name="str_information">客户信息</string>
    <string name="str_customer_designation">客户名称:</string>
    <string name="str_customer_name">客户姓名:</string>
    <string name="str_bank_account_number">银行账户:</string>
    <string name="str_contract">合同信息</string>
    <string name="str_contract_money">合同金额</string>
    <string name="str_bank_name">开户人姓名：</string>
    <string name="str_bank_of_deposit">开户行：</string>
    <string name="voucher">打款凭证:</string>
    <string name="confirm">确认</string>
    <string name="str_recipient_information">收货信息：</string>
    <string name="str_recipient_person">收货人：</string>
    <string name="str_recipient_adress">收货地址：</string>
    <string name="str_contract_phonto">合同照片：</string>
    <string name="str_upload_contract">查看合同</string>
    <string name="str_remits_time">打款日期：</string>
    <string name="str_signature_time">签署时间：</string>
    <string name="str_upload_voucher">查看凭证</string>
    <string name="hint1">请输入客户公司/商品名称</string>
    <string name="hint2">请输入客户姓名</string>
    <string name="hint3">请输入客户手机联系方式</string>
    <string name="hint4">请输入客户联系地址</string>
    <string name="hint5">请输入银行账号</string>
    <string name="hint6">请输入开户人姓名</string>
    <string name="hint7">请输入开户银行</string>
    <string name="hint8">请输入合同金额</string>
    <string name="hint9">请输入合同金额</string>
    <string name="hint10">请输入收货人姓名</string>
    <string name="hint11">请输入收货人联系方式</string>
    <string name="hint12">请输入收货人接收地址</string>
    <string name="hint13">此功能暂未开放</string>
    <string name="receive">接收</string>
    <string name="hint14">请填写姓名</string>
    <string name="hint15">请选择</string>
    <string name="hint16">请正确填写职务</string>
    <string name="hint17">请填写公司名称</string>
    <string name="hint18">请填写详细地址</string>
    <string name="hint19">请正确填写身份证号码</string>
    <string name="hint20">请正确填写邮箱地址</string>
    <string name="hint21">务必与支付宝绑定姓名一致</string>
    <string name="hint22">请填写正确的支付宝账号</string>
    <string name="hint25">任务未领取</string>
    <string name="hint26">请正确输入11位手机号码</string>
    <string name="hint27">请正确输入公司名称</string>
    <string name="hint28">请写明您的工作职责范围及工作内容，最多输入1000字</string>
    <string name="str_look_logistical">查看物流</string>
    <string name="str_logistical_phone">物流电话:</string>
    <string name="str_purse">钱包余额</string>
    <string name="str_withdraw_cash">提现</string>
    <string name="str_severce">联系客服</string>
    <string name="str_orders_track">订单跟踪</string>
    <string name="strettle_accounts">结算提成</string>
    <string name="str_close">关闭</string>
    <string name="str_look_job_experience">查看工作经历</string>
    <string name="str_job">工作经历</string>
    <string name="str_find">发现</string>
    <string name="str_purses">钱包</string>
    <string name="str_surplus">余额</string>
    <string name="str_application_cash">提现申请</string>
    <string name="str_alipay">支付宝</string>
    <string name="str_bingdingalipay">绑定支付宝</string>
    <string name="str_bingdingweichant">绑定微信钱包</string>
    <string name="str_bingdingbank">绑定银行卡</string>
    <string name="str_weichant">微信钱包</string>
    <string name="str_industries">行业</string>
    <string name="str_bank">银行卡</string>
    <string name="str_nobinding">未绑定</string>
    <string name="str_seemore">查看更多提现方式</string>
    <string name="str_authentication">认证资料</string>
    <string name="str_nature">所属公司性质</string>
    <string name="str_sex">性别</string>
    <string name="str_borth">出生日期</string>
    <string name="str_post">职务</string>
    <string name="str_company">公司名称</string>
    <string name="str_job_time">工作年限</string>
    <string name="str_adress">详细地址</string>
    <string name="str_carded">身份证号</string>
    <string name="str_email">邮箱</string>
    <string name="str_authenticatin">酒商网坚持保护用户信息，认证即表示同意《酒商网用户协议》</string>
    <string name="str_realname">真实姓名：</string>
    <string name="str_alipayname">支付宝账号：</string>
    <string name="str_preserved">保存</string>
    <string name="str_sales_locality">招商地址:</string>
    <string name="str_endtime">截止时间：</string>
    <string name="str_code">编码：</string>
    <string name="quxiao">取消</string>
    <string name="commint">确定</string>
    <string name="hint23">温馨提示</string>
    <string name="hint24">亲，你还没有完成资料认证，立即认证，查看详情！</string>
    <string name="hint30">亲，你提交的认证资料审核失败,请重新提交！</string>
    <string name="hint40">亲,你提交的认证资料正在审核阶段！</string>
    <string name="hint41">亲，你提交的认证资料审核成功！</string>
    <string name="str_abandoned">放弃任务</string>
    <string name="str_look">查看</string>
    <string name="str_part_time_person">兼职人员:</string>
    <string name="str_start_time">开始时间</string>
    <string name="str_end_time">结束时间</string>
    <string name="str_bewrite">描述</string>
    <string name="str">+ 继续添加工作经历</string>
     <string name="str_commit_contract">提交合同</string>
     <string name="str_send">酒企发货</string>
    <string name="str_established_send">确认收货</string>
    <string name="str_statements">提成结算</string>
    <string name="no_qualification">未认证</string>
    <string name="str_orders">物流号:</string>
    <string name="str_count">招商数量:</string>
    <string name="str_investment">酒商网广告招商介绍</string>
    <string name="str_vestment">酒商网招商栏介绍</string>
    <string name="str_buxian">不限</string>
    <string name="str_buxiandiqu">招商地区：不限地区</string>
    <string name="str_zhaoshang">酒商网广告全国招商</string>
    <string name="str_shangyun">酒商云全国招商</string>
    <string name="str_ticheng_title">一、提成规则</string>
    <string name="str_ticheng">每单提成金额为合同金额的</string>
    <string name="ziyuan1">一、酒商网广告招商资源介绍</string>
    <string name="str_ziyuan">\t\t酒商网广告资源主要包括酒商网首页、新闻、行业、学院、论坛、招聘、报社、百科、招商十余板块广告位，手机客户端开机图、焦点图、
    信息流、推荐位等精品广告位，酒商公众号软文、图片广告等。广告位可用于展示厂家信息及其产品信息，提升厂家及其产品知名度及品牌价值。兼职销售人员将酒商网广告位推荐给企业关键人，促成合作，从而提成。</string>
    <string name="ziyuan2">二、操作方式</string>
    <string name="str_caozuo1">兼职销售人员需掌握招商技巧，了解酒商网推广流程;</string>
    <string name="str_caozuo2">寻找有意向客户，进行长期跟进，跟进过程中，如有疑问需要专业销售人员指导，可拨打</string>
    <string name="str_caozuo3">进行专业销售指导;</string>
    <string name="zhidao3">与客户达成销售共识后，兼职销售人员需与酒商网销售人员取得联系，由酒商网销售人员与酒厂客户签订销售协议；</string>
    <string name="zhidao4">合同生效并成功打款后，酒商网即时支付兼职销售人员提成费用。</string>
    <string name="zhengmian">证件照正面</string>
    <string name="zhengmiansucess">正面上传成功</string>
    <string name="fanmian">证件照反面</string>
    <string name="fanmian_suc">背面上传成功</string>
    <string name="shouchi">手持证件照</string>
    <string name="shouchisu">手持上传成功</string>
    <string name="addressb_country">请选择</string>
    <string name="str_code_test">请正确填写验证码</string>
    <string name="str_name">姓名不能为空</string>
    <string name="str_sex_choose">请选择性别</string>
    <string name="str_bort_choose">请选择出生日期</string>
    <string name="str_company_choose">请填写公司名称</string>
    <string name="str_nature_choose">请选择公司性质</string>
    <string name="str_post_choose">请填写职务</string>
    <string name="str_year_choose">请选择工作年限</string>
    <string name="str_address_choose">请填写详细地址</string>
    <string name="str_carded_choose">请填写身份证</string>
    <string name="str_email_choose">请填写邮箱地址</string>
    <string name="str_job_choose">请填写工作经历</string>
    <string name="str_back">请上传身份证背面图片</string>
    <string name="str_face">请上传身份证正面图片</string>
    <string name="str_hand">请上传手持身份证图片</string>
    <string name="str_zhuangtai">工作状态</string>
    <string name="str_diqu">居住地区</string>
    <string name="str_suc">提交认证信息成功</string>
    <string name="full">已经到底部了</string>
    <string name="lingqu">已领取过了</string>
    <string name="isend">任务已领取完</string>
    <string name="tx_start_time">请选择开始时间</string>
    <string name="tx_hangye">请选择行业</string>
    <string name="tx_end_time">请选择结束时间</string>
    <string name="tx_title">描述不能为空</string>
    <string name="zhaoshang1">一、招商栏目介绍</string>
    <string name="str_zs_recommended">\t\t酒商网栏目用于展示厂家产品信息，提升产品知名度及品牌价值，精准展示给经销商和分销商，在这里，厂家将多元化的产品展示给经销商、分销商，经销商、分销商获取上万种优质产品信息。目的就是将好产品带给优质客户，将优质客户带给好的企业。兼职销售人员将酒商网广告推奖给企业关键人，促成合作，从而提成。</string>
    <string name="zs_buzou2">二、任务步骤</string>
    <string name="zs">招商栏点位详细介绍及报价</string>
    <string name="gg">酒商网广告招商点位详细介绍及报价</string>
    <string name="isinvaild">任务已无效</string>
    <string name="isinvalid">任务已过期</string>
    <string name="photo_list">图片列表</string>
    <string name="str_look_voucher">查看凭证</string>
    <string name="str_look_contract">查看合同</string>
    <string name="ploadvoucher_sc">凭证图片上传成功</string>
    <string name="look_invoices">查看单据</string>
    <string name="notlogin">请先登录</string>
    <string name="wait">待审核</string>
    <string name="loading">加载中</string>
    <string name="uplodeloding">上传中。。。</string>
</resources>