<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/dimen_15dp"
    android:background="@color/write"
    android:layout_height="wrap_content">
    <!--公司名称-->
    <LinearLayout
        android:paddingLeft="@dimen/dimen_60dp"
        android:paddingRight="@dimen/dimen_60dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/txtsize_36sp"
            android:paddingTop="@dimen/dimen_60dp"
            android:paddingBottom="@dimen/dimen_60dp"
            android:textColor="@color/heise"
            android:text="@string/str_company"
            style="@style/text" />

        <EditText
            android:textColor="@color/hui2"
            android:textSize="@dimen/txtsize_36sp"
            android:gravity="right|center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint27"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_firm" />
    </LinearLayout>

    <TextView
        android:layout_marginLeft="@dimen/dimen_30dp"
        style="@style/transverse_line" />

    <!--行业-->
    <LinearLayout
        android:paddingLeft="@dimen/dimen_60dp"
        android:paddingRight="@dimen/dimen_60dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="12sp"
            android:paddingTop="@dimen/dimen_60dp"
            android:paddingBottom="@dimen/dimen_60dp"
            android:textColor="@color/heise"
            android:text="@string/str_industries"
            style="@style/text" />

        <TextView
            android:id="@+id/hangye"
            android:textColor="@color/hui"
            android:textSize="@dimen/txtsize_36sp"
            android:gravity="right|center_vertical"
            android:layout_weight="1"
            android:text="@string/hint15"
            android:drawablePadding="@dimen/dimen_15dp"
            android:drawableRight="@mipmap/enter1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <TextView
        android:layout_marginLeft="@dimen/dimen_30dp"
        style="@style/transverse_line" />

    <!--开始时间-->
    <LinearLayout
        android:paddingTop="@dimen/dimen_30dp"
        android:paddingLeft="@dimen/dimen_60dp"
        android:paddingRight="@dimen/dimen_60dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/job1"
            style="@style/text" />

        <TextView
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/txtsize_36sp"
            android:textColor="@color/heise"
            android:text="@string/str_start_time"
            style="@style/text" />

        <TextView
            android:id="@+id/time_start"
            android:textColor="@color/hui"
            android:textSize="@dimen/txtsize_36sp"
            android:gravity="right|center_vertical"
            android:layout_weight="1"
            android:text="@string/hint15"
            android:drawablePadding="@dimen/dimen_15dp"
            android:drawableRight="@mipmap/enter1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <ImageView
        android:paddingLeft="@dimen/dimen_60dp"
        style="@style/text"
        android:src="@mipmap/job2" />
    <!--结束时间-->
    <LinearLayout
        android:paddingBottom="@dimen/dimen_30dp"
        android:paddingLeft="@dimen/dimen_60dp"
        android:paddingRight="@dimen/dimen_60dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/job3"
            style="@style/text" />

        <TextView
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/txtsize_36sp"
            android:textColor="@color/heise"
            android:text="@string/str_end_time"
            style="@style/text" />

        <TextView
            android:id="@+id/time_end"
            android:textColor="@color/hui"
            android:textSize="@dimen/txtsize_36sp"
            android:gravity="right|center_vertical"
            android:layout_weight="1"
            android:text="@string/hint15"
            android:drawablePadding="@dimen/dimen_15dp"
            android:drawableRight="@mipmap/enter1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <TextView
        android:layout_marginLeft="@dimen/dimen_30dp"
        style="@style/transverse_line" />
    <!--描述-->
    <TextView
        android:padding="@dimen/dimen_36dp"
        android:textSize="@dimen/txtsize_36sp"
        android:textColor="@color/heise"
        android:text="@string/str_bewrite"
        style="@style/text"/>

    <EditText
        android:id="@+id/bewrite"
        android:paddingLeft="@dimen/dimen_60dp"
        android:paddingRight="@dimen/dimen_60dp"
        android:background="@null"
        android:textColor="@color/hui"
        android:textSize="@dimen/txtsize_36sp"
        android:hint="@string/hint28"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_300dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/commit2"
        android:layout_margin="@dimen/dimen_60dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_120dp"
        app:cardCornerRadius="@dimen/dimen_18dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/orange1">

        <TextView
            android:textSize="@dimen/txtsize_36sp"
            android:layout_gravity="center"
            android:textColor="@color/write"
            android:text="@string/str_preserved"
            style="@style/text" />
    </android.support.v7.widget.CardView>
</LinearLayout>