<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_margin="@dimen/dimen_30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tx"
            android:textColor="@color/hui2"
            android:textSize="@dimen/txtsize_36sp"
            android:text="@string/str_part_time_person"
            style="@style/text" />

        <TextView
            android:textColor="@color/hui2"
            android:textSize="@dimen/txtsize_36sp"
            android:text="12sds"
            style="@style/text"
            android:layout_alignBaseline="@+id/tx"
            android:layout_alignBottom="@+id/tx"
            android:layout_toEndOf="@+id/tx"
            android:id="@+id/tx_name" />

        <LinearLayout
            android:layout_alignParentRight="true"
            style="@style/text">
            <TextView
                android:textColor="@color/hui2"
                android:textSize="@dimen/txtsize_36sp"
                android:text="@string/perc"
                style="@style/text" />
            <TextView
                android:id="@+id/tx_percentage"
                android:textColor="@color/orange"
                android:textSize="@dimen/txtsize_42sp"
                android:text="10,000"
                style="@style/text" />
            <TextView
                android:textColor="@color/hui2"
                android:textSize="@dimen/txtsize_36sp"
                android:text="@string/price_rmb"
                style="@style/text" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>